--- a/scss/utilities/_shop.scss
+++ b/scss/utilities/_shop.scss
@@ -1,10 +1,10 @@
 // Variables
 $primary-color: #f7f1f1;
 $secondary-color: #000000;
-$button-elegant-color: #070706; // Color elegante para los botones
+$button-elegant-color: #070706; 
 $button-elegant-hover: darken($button-elegant-color, 10%);
-$card-bg-color: #faf8f5; // Fondo elegante claro para las tarjetas
-$card-border-color: #e0e0e0; // Borde sutil
+$card-bg-color: #faf8f5; 
+$card-border-color: #e0e0e0; // Borde
 
 // Estilos globales
 body { 
