--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,8 +1,7 @@
 // Variables para imágenes de fondo
-$body-bg-image: url('../img/body1.jpg');  // Cambia la ruta de la imagen
-$header-bg-color: #030303;  // Cambia la ruta de la imagen
-// Variables
-// Variables
+$body-bg-image: url('../img/body1.jpg');  
+$header-bg-color: #030303;  
+
 $primary-color: #ffffff;
 $secondary-color: #000000;
 $font-stack: 'Roboto', sans-serif;
