--- a/css/main.css
+++ b/css/main.css
@@ -95,10 +95,18 @@ button.btn-elegant:hover {
   text-align: center;
 }
 
+body {
+  font-family: "Helvetica Neue", sans-serif;
+  background-color: #f3f3f3;
+  color: #000000;
+}
+
 .contact-form {
-  background-color: #f7f1f1;
+  background-color: rgba(248, 240, 240, 0.8);
   border: 1px solid #333333;
   border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .contact-form .form-label {
   color: #000000;
@@ -110,11 +118,17 @@ button.btn-elegant:hover {
   border-radius: 10px;
 }
 .contact-form .btn-primary {
-  background-color: #007bff;
+  background-color: #0f0e0f;
   border: none;
 }
 .contact-form .btn-primary:hover {
-  background-color: #0062cc;
+  background-color: black;
+}
+
+h2 {
+  font-family: "Helvetica Neue", sans-serif;
+  color: #000000;
+  margin-bottom: 20px;
 }
 
 html, body {
@@ -126,7 +140,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Roboto", sans-serif;
-  background-color: #f7f1f1;
+  background-color: rgba(248, 240, 240, 0.8);
 }
 
 a {
@@ -155,12 +169,12 @@ header .navbar {
   background-color: #000000;
 }
 header .navbar .navbar-nav .nav-link {
-  color: #f7f1f1;
+  color: rgba(248, 240, 240, 0.8);
   font-weight: 500;
   margin: 0 10px;
 }
 header .navbar .navbar-nav .nav-link:hover {
-  color: white;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .main-l {
@@ -233,7 +247,7 @@ img.rounded-image {
 
 footer {
   background-color: #000000;
-  color: #f7f1f1;
+  color: rgba(248, 240, 240, 0.8);
 }
 footer h5 {
   margin-bottom: 20px;
@@ -247,10 +261,10 @@ footer ul li {
   margin-right: 10px;
 }
 footer ul li a {
-  color: #f7f1f1;
+  color: rgba(248, 240, 240, 0.8);
 }
 footer ul li a:hover {
-  color: white;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 @media (max-width: 767px) {
