--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@ $background-image: url('../img/body1.jpg'); // Cambia la ruta a tu imagen de fon
 @import "utilities/nosotros";
 @import "utilities/shop";
 @import "utilities/cita";
+@import "utilities/servivios";
 
 // Estilos globales
 html, body {
