--- a/scss/utilities/_nosotros.scss
+++ b/scss/utilities/_nosotros.scss
@@ -1,48 +1,34 @@
 .about-us-section {
-  background-color: $primary-color; // Fondo de la sección
-  padding: 40px 0;
+  padding: 5px 0;
 
   .container {
     .row {
       display: flex;
       align-items: center;
+      background-color: rgba(244, 250, 250, 0.856);
+      border-radius: 15px;
     }
 
     .rounded-image {
-      border-radius: 15px; // Borde redondeado de la imagen
-      width: 100%;
-      max-height: 500px; // Limitar la altura máxima de la imagen
-      object-fit: cover; // Ajustar la imagen dentro de los límites
+      border-radius: 15px;
+      width: 60%;
+      max-height: 450px;
+      object-fit: cover;
+      margin-bottom: 0; // Eliminamos el margen inferior de la imagen para acercarla al texto
     }
 
     .about-us-title {
       font-size: 2rem;
       font-weight: bold;
-      color: $secondary-color; // Color de título
-      margin-bottom: 20px;
+      color: $secondary-color;
+      margin-bottom: 5px; // Reducimos el margen inferior del título
     }
 
     .about-us-text {
       font-size: 1.1rem;
-      color: darken($secondary-color, 20%); // Color de texto
-      line-height: 1.6;
-    }
-  }
-}
-
-// Responsividad
-@media (max-width: 767px) {
-  .about-us-section {
-    .container {
-      .row {
-        flex-direction: column; // Cambiar la disposición a columna en pantallas pequeñas
-        text-align: center; // Centramos el texto
-      }
-
-      .rounded-image {
-        margin-bottom: 10px; // Espacio entre imagen y texto
-        max-height: 300px; // Ajustar el tamaño de la imagen en móviles
-      }
+      color: darken($secondary-color, 20%);
+      line-height: 1.4; // Ajustamos el interlineado para acercar más las líneas
+      margin-top: 0; // Eliminamos cualquier margen superior para que esté cerca del título
     }
   }
 }
