--- a/css/main.css
+++ b/css/main.css
@@ -1,40 +1,33 @@
 @charset "UTF-8";
 .about-us-section {
-  background-color: #f7f1f1;
-  padding: 40px 0;
+  padding: 5px 0;
 }
 .about-us-section .container .row {
   display: flex;
   align-items: center;
+  background-color: rgba(244, 250, 250, 0.856);
+  border-radius: 15px;
 }
 .about-us-section .container .rounded-image {
   border-radius: 15px;
-  width: 100%;
-  max-height: 500px;
+  width: 60%;
+  max-height: 450px;
   object-fit: cover;
+  margin-bottom: 0;
 }
 .about-us-section .container .about-us-title {
   font-size: 2rem;
   font-weight: bold;
   color: #000000;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 .about-us-section .container .about-us-text {
   font-size: 1.1rem;
   color: black;
-  line-height: 1.6;
+  line-height: 1.4;
+  margin-top: 0;
 }
 
-@media (max-width: 767px) {
-  .about-us-section .container .row {
-    flex-direction: column;
-    text-align: center;
-  }
-  .about-us-section .container .rounded-image {
-    margin-bottom: 10px;
-    max-height: 300px;
-  }
-}
 body {
   font-family: "Roboto", sans-serif;
   background-color: #f7f1f1;
